added logo in app main and modified style

--- a/src/style.css
+++ b/src/style.css
@@ -39,7 +39,7 @@ Elementi di risalto: Usa l'arancione scuro o l'arancione chiaro per i pulsanti e
 }
 
 .light-grey {
-  color: #BDC3C7;
+  background-color: #BDC3C7;
 }
 
 .white {
